fix(session-reports): Adds spacing after edit/view toggle buttons

--- a/resources/less/pages/session-reports.less
+++ b/resources/less/pages/session-reports.less
@@ -36,3 +36,7 @@
         }
     }
 }
+
+.edit-view-toggle {
+    margin-bottom: 0.75rem;
+}
